--- a/index.css
+++ b/index.css
@@ -1,12 +1,21 @@
 body {
   text-align: center;
+  background-color: #dce2f0;
+  color: #50586c;
 }
-
+ul {
+  font-size: 20px;
+}
 li {
   list-style: none;
   margin: 10px 0;
 }
-
 a {
   text-decoration: none;
+}
+a:link {
+  color: #50586c;
+}
+a:visited {
+  color: #50586c;
 }
